// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component render with primary variant 1`] = `
<button
  className="sc-bczRLJ ypFDz"
  type="button"
>
  Hello World
</button>
`;

exports[`Button component render with radius variant 1`] = `
<button
  className="sc-bczRLJ kNlsHU"
  type="button"
>
  Hello World
</button>
`;

exports[`Button component render with secondary variant 1`] = `
<button
  className="sc-bczRLJ jXFloR"
  type="button"
>
  Hello World
</button>
`;

exports[`Button component renders correctly 1`] = `
<button
  className="sc-bczRLJ ypFDz"
  type="button"
>
  Hello World
</button>
`;
